--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -4,15 +4,15 @@
 
   {%- if params.variant -%}
     {%- if params.variant === "primary" -%}
-      {%- set variant = "" -%}
+      {%- set variant = "bg-blue-600 hover:bg-blue-600 text-white" -%}
     {%- endif -%}
 
     {%- if params.variant === "secondary" -%}
-      {%- set variant = "" -%}
+      {%- set variant = "bg-white text-blue-600 hover:bg-blue-50" -%}
     {%- endif -%}
   {%- endif -%}
 
-  <a href="{{ params.href or '#' }}" class="bg-white hover:bg-blue-500 hover:text-white font-medium border-blue-600 border-2 rounded-lg text-center py-2 px-8 no-underline {{ variant or default }} {{ params.class }}">
+  <a href="{{ params.href or '#' }}" class="font-medium border-blue-600 border-2 rounded-lg text-center py-2 px-6 no-underline {{ variant or default }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
