--- a/src/_includes/macros/readmore.njk
+++ b/src/_includes/macros/readmore.njk
@@ -3,6 +3,6 @@
   <summary>
     {{ params.title | safe }}
   </summary>
-  <div class="py-2 pl-5 -translate-x-px border-l-2 border-blue-500">{{ params.content | markdown | safe }}</div>
+  <div class="py-2 pl-5 -translate-x-px border-l-2 border-slate-400">{{ params.content | markdown | safe }}</div>
 </details>
 {% endmacro %}
