--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -1,18 +1,19 @@
 {%- macro button(params) -%}
 
-  {%- set default = "" -%}
+  {%- set default = "bg-blue-50 text-blue-600 hover:bg-blue-50" -%}
 
   {%- if params.variant -%}
     {%- if params.variant === "primary" -%}
-      {%- set variant = "bg-blue-600 hover:bg-blue-600 text-white" -%}
+      {%- set variant = "" -%}
+      {# bg-blue-600 hover:bg-blue-600 text-white #}
     {%- endif -%}
 
     {%- if params.variant === "secondary" -%}
-      {%- set variant = "bg-white text-blue-600 hover:bg-blue-50" -%}
+      {%- set variant = "" -%}
     {%- endif -%}
   {%- endif -%}
 
-  <a href="{{ params.href or '#' }}" class="font-medium border-blue-600 border-2 rounded-lg text-center py-2 px-6 no-underline {{ variant or default }} {{ params.class }}">
+  <a href="{{ params.href or '#' }}" class="font-medium border-blue-600 border-2 rounded text-center py-2 px-6 no-underline {{ variant or default }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
