--- a/src/_includes/macros/tile.njk
+++ b/src/_includes/macros/tile.njk
@@ -1,14 +1,19 @@
 {% macro tile(args) %}
- <div class="relative px-5 py-4 rounded-lg border border-slate-300 shadow-sm bg-white {{ args.theme }}">
-  {% if args.kicker %}
-    <p class="font-medium leading-tight tracking-wider pointer-events-none opacity-80 small-caps">{{ args.kicker | safe }}</p>
-  {% endif %}
-
-  {{ args.icon | svgContents('max-w-16 h-auto w-[calc(8vw+1rem)]') | safe if args.icon }}
-  <a class="z-10 flex-1 text-lg font-semibold leading-snug after:absolute after:inset-0" href="#">{{ args.title }}</a>
-
-  {# {% if args.content %}
-    <p class="opacity-85">{{ args.content | safe }}</p>
-  {% endif %} #}
+<div class="relative overflow-clip">
+ <div class="px-6 py-4 flex gap-4 rounded-lg bg-white border leading-normal border-slate-300 has-[a:hover]:bg-slate-100 has-[a:hover]:border-slate-200 {{ args.theme }} group">
+    <div class="grid gap-px -mt-0.5">
+      {% if args.kicker %}
+      <p class="font-medium leading-tight tracking-wider pointer-events-none opacity-80 small-caps">
+        {%- for item in args.kicker %}{{ item }}{{ ', ' if not loop.last }}{% endfor -%}
+      </p>
+      {% endif %}
+      <a class="z-10 flex-1 font-semibold no-underline text-lg/tight after:absolute after:inset-0 hover:underline hover:decoration-2" href="#">{{ args.title }}</a>
+      {# {% if args.content %}
+        <p class="opacity-85">{{ args.content | safe }}</p>
+      {% endif %} #}
+    </div>
+    <div class="absolute inset-y-0 w-1.5 rounded-l-lg left-0 pointer-events-none  transition-all {{ args.mark }}"></div>
+    {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('ml-auto w-5 h-5 my-auto -mr-1 opacity-75 shrink-0 order-2 group-hover:translate-x-1 transition duration-200') | safe }}
+  </div>
 </div>
 {% endmacro %}
