--- a/src/_includes/partials/prototypeNav.njk
+++ b/src/_includes/partials/prototypeNav.njk
@@ -1,8 +1,12 @@
-<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="fixed inset-x-0 grid items-end justify-end font-mono bottom-6" x-data="{ prototypeMenuOpen: false }">
-  <button type="button" class="relative z-10 -translate-x-6 grid p-1.5 transition-transform hover:-rotate-45 group hover:bg-pink-600 text-pink-400/60 hover:text-pink-400 rounded place-items-center aspect-square" x-on:click="prototypeMenuOpen = !prototypeMenuOpen" x-bind:class="prototypeMenuOpen && 'bg-pink-600 text-pink-400'">
+<aside x-ref="prototypeMenu" aria-label="Sider i prototypen" class="fixed inset-x-0 z-30 grid items-end justify-end font-mono bottom-6" x-data="{ prototypeMenuOpen: false }">
+  <button type="button" class="relative z-20 -translate-x-6 grid p-1.5 transition-transform hover:-rotate-45 group hover:bg-pink-600 text-pink-400/60 hover:text-pink-400 rounded place-items-center aspect-square" x-on:click="prototypeMenuOpen = !prototypeMenuOpen" x-bind:class="prototypeMenuOpen && 'bg-pink-600 text-pink-400'">
     {{ '/src/_includes/svg/icons/globe.svg' | svgContents('w-7 h-7 transition-transform group-hover:rotate-45') | safe }}
   </button>
-  <div class="absolute right-0 z-0 max-w-lg p-8 pb-12 text-sm text-white bg-pink-500 shadow-2xl sm:text-base bottom-1/2 rounded-l-2xl" x-show="prototypeMenuOpen" x-on:click.outside="prototypeMenuOpen = false">
+  <div class="absolute right-0 z-0 max-w-lg p-8 pb-12 text-sm text-white bg-pink-500 shadow-2xl sm:text-base bottom-1/2 rounded-l-2xl" x-show="prototypeMenuOpen" x-on:click.outside="prototypeMenuOpen = false"
+    x-transition:enter="transition-transform "
+    x-transition:enter-start="opacity-0"
+    x-transition:enter-end="opacity-1"
+  >
     <h2 class="text-xs font-semibold tracking-widest uppercase">Sider i prototypen</h2>
     <ul class="mt-3">
     {% set pages = collections.proto | sort(false, false, 'data.order') %}
