--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -1,8 +1,7 @@
 ---
 tags: ['produkt', 'proto']
-description: 'Med «bytteknapp» i bunnen av hver kapittelmeny.'
+description: ''
 permalink: 'produkt/sykepenger/index.html'
-variant: '1'
 ---
 {%- extends 'base.njk' -%}
 
@@ -15,9 +14,12 @@ variant: '1'
       <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
       <div class="mt-6 prose text-pretty max-w-prose">
         <p class="text-lg">{{ ingress | safe }}</p>
-        <div class="px-4 py-3 leading-normal border-l-4 border-slate-300 bg-origin-border bg-slate-100 text-balance">
-          {{ audience | markdown | safe if audience }}
+
+        {% if audience %}          
+        <div class="leading-normal bg-white border  border-slate-300 text-balance {{ 'px-4 py-3 rounded-lg' if audience.style === 'default' }} {{'px-4 py-1 rounded-full w-fit' if audience.style === 'simple' }}">
+          {{ audience.text | markdown | safe if audience }}
         </div>
+        {% endif %}
       </div>
     </div>
 
@@ -87,46 +89,67 @@ variant: '1'
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="grid grid-flow-row-dense mt-8 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}" x-data="{ tocOpen: false }">
-        {% if not loop.last %}
-        <div class="aspect-square rounded-full w-1/2 max-w-[8ch] bg-green-200 mt-24"></div>
+      <section class="grid grid-flow-row-dense mt-8 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}" x-data="{ tocOpen: false, isStuck: false }">
+        <div class="z-20 grid py-6 text-lg font-semibold bg-white col-full grid-cols-combi">
+          {% if chapter.data.icon %}
+          <div class="aspect-square rounded-full grid place-items-center w-1/2 max-w-[4.75ch] bg-green-200 mt-24 mb-6">
+            {{ chapter.data.icon | svgContents('w-[3ch] h-[3ch] text-green-800') | safe if chapter.data.icon }}
+          </div>
+          {% endif %}
+          <h2 class="font-bold text-xl/tight text-balance">
+            <a href="#{{ chapter.data.title | slugify }}">{{ chapter.data.title }}</a>
+          </h2>
+        </div>
+
+        {# <div x-show="isStuck" class="sticky top-0 z-10">
+          <div 
+            class="absolute sm:rounded-b-lg top-0 -inset-x-5 px-5 py-2.5 shadow-lg bg-slate-100 border-b border-slate-200"
+            x-show="isStuck"
+            x-transition:enter="transition ease-out duration-200"
+            x-transition:enter-start="-translate-y-full"
+            x-transition:enter-end="translate-y-0"
+            x-transition:leave="transition"
+            x-transition:leave-start="translate-y-0"
+            x-transition:leave-end=" -translate-y-full"
+          >
+            <a class="flex items-center gap-1 hover:text-blue-600 hover:underline" href="#{{ chapter.data.title | slugify }}">
+              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6') | safe }}
+              {{ chapter.data.title }}
+            </a>
+          </div>
+        </div> #}
+
+        {# Chapter TOC #}
+        {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 and not chapter.data.hideToc %}
+        <nav class="relative px-5 py-3 rounded-lg bg-slate-100">
+          <h3 class="pb-2 font-semibold">I dette kapittelet</h3>
+          <ul class="grid gap-4 mt-1 justify-items-start">
+            {% for item in chapter.templateContent | tocData %}
+            <li>
+              <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
+                {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
+                <span>{{ item.text }}</span>
+              </a>
+            </li>
+            {% endfor %}
+            {# <li class="pt-5 border-t justify-self-stretch border-slate-400/25">
+              <a 
+                class="inline-flex items-center gap-0.5 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" 
+                href="{{ page.url }}" 
+              >
+                {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('-translate-y-0.5 opacity-85') | safe }}
+                <span>Til toppen av siden</span>
+              </a>
+            </li> #}
+          </ul>
+        </nav>
         {% endif %}
 
-        <div class="mb-8 col-main">
-          <h2 class="mt-8 mb-6 font-bold text-xl/tight text-balance ">
-            {{ chapter.data.title }}
-          </h2>
+        <div x-intersect:leave="isStuck = true" x-intersect:enter.full="isStuck = false"></div>
 
-          {# Chapter TOC #}
-          {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 and not chapter.data.hideToc %}
-          <nav class="relative px-5 py-3 rounded-lg bg-slate-100">
-            <h3 class="pb-2 font-semibold">I dette kapittelet</h3>
-            <ul class="grid gap-4 mt-1 justify-items-start">
-              {% for item in chapter.templateContent | tocData %}
-              <li>
-                <a class="flex items-start gap-1 p-1 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" href="#{{ item.id }}">
-                  {{ '/src/_includes/svg/icons/arrow-right-angle-aksel.svg' | svgContents('translate-y-0.5 w-5 h-5') | safe }}
-                  <span>{{ item.text }}</span>
-                </a>
-              </li>
-              {% endfor %}
-              {# <li class="pt-5 border-t justify-self-stretch border-slate-400/25">
-                <a 
-                  class="inline-flex items-center gap-0.5 -m-1 text-blue-500 group hover:text-blue-700 text-base/snug hover:underline" 
-                  href="{{ page.url }}" 
-                >
-                  {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('-translate-y-0.5 opacity-85') | safe }}
-                  <span>Til toppen av siden</span>
-                </a>
-              </li> #}
-            </ul>
-          </nav>
-          {% endif %}
-
-          {# Main Content #}
-          <div class="prose prose--separator col-main">
-            {{ chapter.templateContent | markdown | safe }}
-          </div>
+        {# Main Content #}
+        <div class="prose prose--separator col-main">
+          {{ chapter.templateContent | markdown | safe }}
         </div>
       </section>
     {% endfor %}
