--- a/src/_includes/macros/button.njk
+++ b/src/_includes/macros/button.njk
@@ -1,6 +1,6 @@
 {%- macro button(params) -%}
 
-  {%- set default = "bg-blue-50 text-blue-600 hover:bg-blue-50" -%}
+  {%- set default = "bg-blue-50 text-blue-600 hover:bg-blue-100" -%}
 
   {%- if params.variant -%}
     {%- if params.variant === "primary" -%}
@@ -13,7 +13,7 @@
     {%- endif -%}
   {%- endif -%}
 
-  <a href="{{ params.href or '#' }}" class="font-medium border-blue-600 border-2 rounded text-center py-2 px-6 no-underline {{ variant or default }} {{ params.class }}">
+  <a href="{{ params.href or '#' }}" class="font-medium rounded text-center py-2 px-6 no-underline {{ variant or default }} {{ params.class }}">
     <span>{{ params.text | safe }}</span>
   </a>
 {%- endmacro -%}
