--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -186,6 +186,7 @@
   /* Accordion */
   .accordion {
     border-bottom: 1px solid theme('colors.slate.200');
+    margin-block-end: theme('spacing.12');
   }
   .accordion details {
     display: grid;
@@ -230,7 +231,7 @@
   }
   .accordion summary:before {
     background-color: theme('colors.blue.50');
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 103 197 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(0 103 197 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
     content: "";
@@ -252,7 +253,7 @@
   }
   .accordion summary:hover:before {
     background-color: theme('colors.blue.700');
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='18' height='18' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(255 255 255 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgb(255 255 255 / 1)' stroke-linecap='round' stroke-width='2' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
   }
   .accordion summary > * {
     text-wrap: pretty;
@@ -271,7 +272,7 @@
   /* Expander */
   .expander {
     display: grid;
-    padding-inline: 16px;
+    padding-inline: 20px;
     border: 1px solid theme('colors.slate.300');
     border-radius: theme('borderRadius.lg');
   }
@@ -282,8 +283,8 @@
     appearance: none;
     display: flex;
     list-style: none;
-    padding: 0.75em 8px 0.625em 12px;
-    margin-inline: -16px;
+    padding: 0.75em 8px 0.625em 16px;
+    margin-inline: -20px;
     border-radius: theme('borderRadius.lg');
     cursor: pointer;
     text-align: left;
@@ -319,7 +320,7 @@
     align-self: baseline;
     margin-inline: auto 10px;
     transition: rotate 150ms;
-    transform: translateY(0);
+    transform: translateY(1px);
     width: 22px;
     height: 22px;
   }
@@ -330,7 +331,7 @@
     text-wrap: pretty;
   }
   :where(.expander) summary > span {
-    transform: translateY(-1px);
+    transform: translateY(0px);
   }
 
 
@@ -345,7 +346,7 @@
     display: flex;
     width: fit-content;
     list-style: none;
-    padding: 0.25em 16px 0.25em 44px;
+    padding: 0.375em 16px 0.25em 44px;
     cursor: pointer;
     background-color: theme('colors.slate.100');
     border-radius: theme('borderRadius.lg');
@@ -359,7 +360,9 @@
     display: none;
   }
   :where(.readmore) summary:before {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='1.75' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
+    /* background-color: theme('colors.white');
+    border-radius: theme('borderRadius.full'); */
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24' fill='none'%3E%3Cpath stroke='rgba(0, 69, 156, 1)' stroke-linecap='round' stroke-width='1.75' d='m6.5 10 5.493 5.493a.01.01 0 0 0 .014 0L17.5 10'/%3E%3C/svg%3E");
     background-position: center;
     background-repeat: no-repeat;
     content: "";
@@ -367,9 +370,9 @@
     flex-shrink: 0;
     place-items: center;
     align-self: baseline;
-    margin-inline: -32px 8px;
+    margin-inline: -31px 8px;
     transition: transform 150ms;
-    transform: translateY(2px);
+    transform: translateY(3px);
     width: 20px;
     height: 20px;
   }
@@ -385,7 +388,7 @@
     margin-bottom: 16px;
   }
   :where(.readmore[open]) summary:before {
-    transform: translateY(2px) rotate(-180deg);
+    transform: translateY(3px) rotate(-180deg);
   }
   :where(.readmore) summary > * {
     text-wrap: pretty;
