--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -156,4 +156,7 @@ permalink: 'produkt/sykepenger/index.html'
 
     <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-main">{{ published | safe }}</div>
   </main>
+
+  {% include "partials/kontakt.njk" %}
+
 {%- endblock -%}
