--- a/src/pages/produkt/sykepenger/sykepenger.njk
+++ b/src/pages/produkt/sykepenger/sykepenger.njk
@@ -8,7 +8,7 @@ permalink: 'produkt/sykepenger/index.html'
 {%- block content -%}
   {% set chapters = collections.all | onlyTags('sykepenger', 'innhold') | sort(false, false, 'data.order') %}
 
-  <main class="grid py-16 grid-cols-combi" data-theme="sykepenger">
+  <main class="grid pt-16 grid-cols-combi" data-theme="sykepenger" x-data="{ showTopAnchor: false }">
     <div class="col-main">
       <div class="tracking-widest small-caps">{{ category | safe }}</div>
       <h1 class="mt-1 font-extrabold text-2xl/tight text-balance ">{{ title | safe }}</h1>
@@ -24,7 +24,7 @@ permalink: 'produkt/sykepenger/index.html'
     </div>
 
     {# Innholdsfortegnelse #}
-    <div class="px-5 py-4 mt-8 rounded-lg bg-blue-50/75">
+    <div class="px-5 py-4 mt-8 rounded-lg bg-blue-50/75" x-intersect:leave="showTopAnchor = true" x-intersect:enter.margin.-400px.0.0.0="showTopAnchor = false">
       <h2 class="pb-2 text-base font-semibold">Innhold på siden</h2>
       <ul class="grid gap-4 py-1">
         {% for chapter in chapters.slice(0, -1) %}
@@ -38,7 +38,6 @@ permalink: 'produkt/sykepenger/index.html'
         {% endfor %}
       </ul>
     </div>
-
 
     {# Sticky Chapter TOC #}
     {# <div 
@@ -89,8 +88,8 @@ permalink: 'produkt/sykepenger/index.html'
     {# Innhold #}
     {% for chapter in chapters %}
       {% set chapterIndex = loop.index %}
-      <section class="grid grid-flow-row-dense mt-8 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}" x-data="{ tocOpen: false, isStuck: false }">
-        <div class="z-20 grid mt-8 text-lg font-semibold bg-white col-full grid-cols-combi">
+      <section class="grid grid-flow-row-dense mt-8 col-full grid-cols-combi " id="{{ chapter.data.title | slugify }}">
+        <div class="grid mt-8 text-lg font-semibold col-full grid-cols-combi">
           {% if chapter.data.icon %}
           <div class="aspect-square rounded-full grid place-items-center w-1/2 max-w-[4.75ch] bg-green-200 mt-8 mb-4">
             {{ chapter.data.icon | svgContents('w-[3ch] h-[3ch] text-green-800') | safe if chapter.data.icon }}
@@ -100,24 +99,6 @@ permalink: 'produkt/sykepenger/index.html'
             <a href="#{{ chapter.data.title | slugify }}">{{ chapter.data.title }}</a>
           </h2>
         </div>
-
-        {# <div x-show="isStuck" class="sticky top-0 z-10">
-          <div 
-            class="absolute sm:rounded-b-lg top-0 -inset-x-5 px-5 py-2.5 shadow-lg bg-slate-100 border-b border-slate-200"
-            x-show="isStuck"
-            x-transition:enter="transition ease-out duration-200"
-            x-transition:enter-start="-translate-y-full"
-            x-transition:enter-end="translate-y-0"
-            x-transition:leave="transition"
-            x-transition:leave-start="translate-y-0"
-            x-transition:leave-end=" -translate-y-full"
-          >
-            <a class="flex items-center gap-1 hover:text-blue-600 hover:underline" href="#{{ chapter.data.title | slugify }}">
-              {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-6 h-6') | safe }}
-              {{ chapter.data.title }}
-            </a>
-          </div>
-        </div> #}
 
         {# Chapter TOC #}
         {% if chapter.templateContent and chapter.templateContent | tocData | length > 0 and not chapter.data.hideToc %}
@@ -145,8 +126,6 @@ permalink: 'produkt/sykepenger/index.html'
         </nav>
         {% endif %}
 
-        <div x-intersect:leave="isStuck = true" x-intersect:enter.full="isStuck = false"></div>
-
         {# Main Content #}
         <div class="prose prose--separator col-main">
           {{ chapter.templateContent | markdown | safe }}
@@ -154,7 +133,21 @@ permalink: 'produkt/sykepenger/index.html'
       </section>
     {% endfor %}
 
-    <div class="pt-2 mt-12 text-sm italic border-t border-slate-200 col-main">{{ published | safe }}</div>
+    <div class="pt-2 my-12 text-sm italic border-t border-slate-200 col-main">{{ published | safe }}</div>
+
+    {# <div 
+      class="sticky z-20 hidden mx-auto mb-8 bottom-3 sm:grid sm:items-center" 
+      x-show="showTopAnchor" 
+      x-transition:enter="transition duration-200 ease-in"
+      x-transition:enter-start="translate-y-6 opacity-0"
+      x-transition:enter-end="translate-y-0 opacity-100"
+    >
+      <a href="#toppen" class="inline-flex items-center justify-center gap-1 py-3 pl-3 pr-5 mx-auto text-sm leading-tight text-center text-white rounded-full ring-4 ring-white hover:underline bg-deepblue-400">
+        {{ '/src/_includes/svg/icons/arrow-up.svg' | svgContents('w-5 h-5 -translate-y-px') | safe }}
+        <span>Til toppen av siden</span>
+      </a>
+    </div> #}
+
   </main>
 
   {% include "partials/kontakt.njk" %}
