--- a/src/_includes/macros/tile.njk
+++ b/src/_includes/macros/tile.njk
@@ -1,19 +1,17 @@
 {% macro tile(args) %}
-<div class="relative overflow-clip rounded-lg border border-slate-300 has-[a:hover]:border-slate-400 {{ args.theme }}">
- <div class="px-5 py-3 flex gap-4 rounded-lg bg-white  leading-normal  has-[a:hover]:bg-blue-50/75  group">
-    <div class="">
-      {% if args.kicker %}
-      <p class="font-medium leading-tight tracking-wide pointer-events-none opacity-70 small-caps">
-        {%- for item in args.kicker %}{{ item }}{{ ', ' if not loop.last }}{% endfor -%}
-      </p>
-      {% endif %}
-      <a class="z-10 flex-1 font-semibold no-underline text-base/tight after:absolute after:inset-0 hover:underline hover:decoration-2" href="#">{{ args.title }}</a>
-      {# {% if args.content %}
-        <p class="opacity-85">{{ args.content | safe }}</p>
-      {% endif %} #}
-    </div>
-    <div class="absolute inset-y-0 w-1 rounded-l-lg left-0 pointer-events-none  transition-all {{ args.mark }}"></div>
-    {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('ml-auto w-5 h-5 my-auto -mr-1 opacity-60 shrink-0 order-2 group-hover:translate-x-1 transition duration-200') | safe }}
+<div class="relative overflow-clip flex gap-4 px-5 py-3 leading-normal rounded-lg group border border-slate-300 bg-white {{ args.theme or "has-[a:hover]:bg-blue-50/75 has-[a:hover]:border-slate-400" }}">
+ <div class="">
+    {%- if args.kicker %}
+    <p class="font-medium leading-tight tracking-wide pointer-events-none opacity-70 small-caps">
+      {%- for item in args.kicker %}{{ item }}{{ ', ' if not loop.last }}{% endfor -%}
+    </p>
+    {%- endif %}
+    <a class="z-10 flex-1 font-semibold no-underline text-base/tight after:absolute after:inset-0 hover:underline hover:decoration-2" href="#">{{ args.title }}</a>
+    {# {% if args.content %}
+      <p class="opacity-85">{{ args.content | safe }}</p>
+    {% endif %} #}
   </div>
+  <div class="absolute inset-y-0 w-1 rounded-l-lg left-0 pointer-events-none  transition-all {{ args.mark }}"></div>
+  {{ '/src/_includes/svg/icons/arrow-right.svg' | svgContents('ml-auto w-5 h-5 my-auto -mr-1 opacity-60 shrink-0 order-2 group-hover:translate-x-1 transition duration-200') | safe }}
 </div>
 {% endmacro %}
